--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portone/browser-sdk": "^0.1.1",
+    "@supabase/supabase-js": "^2.46.1",
     "lucide-react": "^0.548.0",
     "next": "14.2.32",
     "react": "^18",
-    "react-dom": "^18",
-    "@supabase/supabase-js": "^2.46.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
