--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@portone/browser-sdk": "^0.1.1",
     "@supabase/supabase-js": "^2.46.1",
+    "axios": "^1.13.2",
     "lucide-react": "^0.548.0",
     "next": "14.2.32",
     "react": "^18",
